--- a/api_fetcher/Cargo.toml
+++ b/api_fetcher/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.38", features = ["serde"] }
+dotenv = "0.15.0"
 reqwest = { version = "0.12.3", features = ["json", "blocking"] }
 serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
