--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,11 +31,7 @@ jobs:
         pip install numpy pillow
     - name: Lint with ruff
       run: |
-        cd display_controller && ruff check
-        # stop the build if there are Python syntax errors or undefined names
-        # flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        # flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        cd display_controller && ruff check *.py lib/*.py -v
     - name: Test with pytest
       run: |
         cd display_controller && python3 -m unittest
