--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,11 +27,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install ruff
-        cd display_controller
         pip install numpy pillow
     - name: Lint with ruff
       run: |
         cd display_controller && ruff check *.py lib/*.py -v
     - name: Test with pytest
       run: |
-        cd display_controller && python3 -m unittest
+        cd display_controller && ls -lah lib/waveshare_epd && python3 -m unittest
