--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,11 +26,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ruff
-        pip install numpy pillow
+        pip install ruff numpy pillow
     - name: Lint with ruff
       run: |
         cd display_controller && ruff check *.py lib/*.py -v
-    - name: Test with pytest
+    - name: Test with unittest
       run: |
         cd display_controller && python3 -m unittest
