--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ruff numpy pillow
+        pip install ruff numpy==1.26.4 pillow==10.3.0
     - name: Lint with ruff
       run: |
         cd display_controller && ruff check *.py lib/*.py -v
