--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,6 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install ruff numpy==1.26.4 pillow==10.3.0
+        cd display_controller && pip install -r requirements.txt
     - name: Lint with ruff
       run: |
         cd display_controller && ruff check *.py lib/*.py -v
