--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,11 +22,12 @@ jobs:
     - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
-        python-version: "3.9"
+        python-version: "3.9.2"
+        cache: 'pip' # caching pip dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ruff numpy==1.26.4 pillow==10.3.0
+        pip install ruff
         cd display_controller && pip install -r requirements.txt
     - name: Lint with ruff
       run: |
