--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,20 +9,17 @@ on:
   pull_request:
     branches: [ "main" ]
 
-# permissions:
-#   contents: read
-
 jobs:
   build:
 
-    runs-on: ubuntu-20.04
+    runs-on: macos-14
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.9
+    - name: Set up Python 3.10
       uses: actions/setup-python@v5
       with:
-        python-version: "3.9.2"
+        python-version: "3.10.11"
         cache: 'pip' # caching pip dependencies
     - name: Install dependencies
       run: |
