--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,8 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ruff
-        cd display_controller && pip install -r requirements.txt
+        pip install ruff pillow==10.3.0 numpy==1.26.4
     - name: Lint with ruff
       run: |
         cd display_controller && ruff check *.py lib/*.py -v
