--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-
+    # requires arm64 runner for not failing image manipulation
     runs-on: macos-14
 
     steps:
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ruff pillow==10.3.0 numpy==1.26.4
+        pip install ruff pillow==10.3.0 numpy==1.26.4 # cannot install all on macos runner
     - name: Lint with ruff
       run: |
         cd display_controller && ruff check *.py lib/*.py -v
